--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^2.0.0"
   }
 }
